data/contextbench_phase1/stripped/generated_memory_text_from_stripped_adp/000177_94accbef-6616-4a0b-9af3-da420b4d5a87.txt
PRIOR EXPERIENCE MEMORY
This is read-only prior trajectory evidence for OpenHands.
Use it as context only; verify all behavior in the current workspace.

SOURCE
------
- trajectory_id: 94accbef-6616-4a0b-9af3-da420b4d5a87
- repo: pallets/flask
- instance_id: pallets__flask-4992
- base_commit: 4c288bc97ea371817199908d0d9b12de9dae327e
- model: claude-sonnet-4-5-20250929

PRIOR PROBLEM
-------------
Add a file mode parameter to flask.Config.from_file()
Python 3.11 introduced native TOML support with the `tomllib` package. This could work nicely with the `flask.Config.from_file()` method as an easy way to load TOML config files:

```python
app.config.from_file("config.toml", tomllib.load)
```

However, `tomllib.load()` takes an object readable in binary mode, while `flask.Config.from_file()` opens a file in text mode, resulting in this error:

```
TypeError: File must be opened in binary mode, e.g. use `open('foo.toml', 'rb')`
```

We can get around this with a more verbose expression, like loading from a file opened with the built-in `open()` function and passing the `dict` to `app.Config.from_mapping()`:

```python
# We have to repeat the path joining that from_file() does
with open(os.path.join(app.config.root_path, "config.toml"), "rb") as file:
    app.config.from_mapping(tomllib.load(file))
```

But adding a file mode parameter to `flask.Config.from_file()` would enable the use of a simpler expression. E.g.:

```python
app.config.from_file("config.toml", tomllib.load, mode="b")
```

FILES INSPECTED
---------------
- src/flask/config.py [Read: 1]
- tests/test_config.py [Grep: 1, Read: 1]

SEARCH ANCHORS
--------------
- [1] Grep pattern='def from_file'
- [2] Glob glob='**/*config*.py'
- [4] Grep pattern='def from_file' path='testbed'
- [35] Grep pattern='def test.*from_file' path='tests/test_config.py'

TEST / DIAGNOSTIC / OTHER COMMANDS
----------------------------------
- [diagnostic] find testbed -type f -name "*.py" | grep -i config | head -20
- [other/reproduction] python3 --version
- [test] python test_issue.py
- [test] python test_issue.py
- [test] python test_issue.py
- [other/reproduction] which python3.11 || which python3.10 || which python3.9 || echo "no newer python found"
- [other/reproduction] /opt/homebrew/bin/python3.11 test_issue.py
- [other/reproduction] /opt/homebrew/bin/python3.11 test_issue.py
- [other/reproduction] /opt/homebrew/bin/python3.11 test_issue.py
- [other/reproduction] /opt/homebrew/bin/python3.11 test_tomllib.py
- [other/reproduction] /opt/homebrew/bin/python3.11 test_tomllib.py
- [other/reproduction] cd testbed && /opt/homebrew/bin/python3.11 -m pytest tests/test_config.py -xvs 2>&1 | head -100

OBSERVED TEST / RUNTIME FAILURES
--------------------------------
- Traceback (most recent call last):
- Traceback (most recent call last):
- ModuleNotFoundError: No module named 'werkzeug'
- ImportError: cannot import name 'url_quote' from 'werkzeug.urls' (/opt/homebrew/lib/python3.11/site-packages/werkzeug/urls.py)
- TypeError: required field "lineno" missing from alias

RELEVANT OBSERVATION EXCERPTS
-----------------------------
- [Grep Result after action #4]
  Found 1 file
  testbed/src/flask/config.py
- [Read Result after action #6]
       1→import errno
       2→import json
       3→import os
       4→import types
       5→import typing as t
       6→
       7→from werkzeug.utils import import_string
       8→
       9→
      10→class ConfigAttribute:
      11→    """Makes an attribute forward to the config"""
      12→
      13→    def __init__(self, name: str, get_converter: t.Optional[t.Callable] = None) -> None:
      14→        self.__name__ = name
      15→        self.get_converter = get_converter
      16→
      17→    def __get__(self, obj: t.Any, owner: t.Any = None) -> t.Any:
      18→        if obj is None:
      19→            return self
      20→        rv = obj.config[self.__name__]
      21→        if self.get_converter is not None:
      22→            rv = self.get_converter(rv)
      23→        return rv
      24→
      25→    def __set__(self, obj: t.Any, value: t.Any) -> None:
      26→        obj.config[self.__name__] = value
      27→
      28→
      29→class Config(dict):
      30→    """Works exactly like a dict but provides ways to fill it from files
      31→    or special dictionaries.  There are two common patterns to populate the
      32→    config.
      33→
      34→    Either you can fill the config from a config file::
      35→
      36→
  [... truncated ...]
- [Test Output after action #11]
  Exit code 1
    File "test_issue.py", line 50
  SyntaxError: Non-ASCII character '\xe2' in file test_issue.py on line 50, but no encoding declared; see http://www.python.org/peps/pep-0263.html for details
- [Test Output after action #13]
  Exit code 1
    File "test_issue.py", line 57
      print(f"✗ Binary mode test FAILED with error: {e}")
                                                         ^
  SyntaxError: invalid syntax
- [Test Output after action #15]
  Exit code 1
  Traceback (most recent call last):
    File "test_issue.py", line 12, in <module>
      from flask import Flask
    File "./swebench_9_15/testbed/src/flask/__init__.py", line 1, in <module>
      from . import json as json
    File "./swebench_9_15/testbed/src/flask/json/__init__.py", line 13
      def dumps(obj: t.Any, **kwargs: t.Any) -> str:
                   ^
  SyntaxError: invalid syntax
- [Diagnostic Output after action #33]
  ./swebench_9_15/testbed/tests/test_config.py
- [Grep Result after action #35]
  33:def test_config_from_file():
- [Read Result after action #37]
      32→
      33→def test_config_from_file():
      34→    app = flask.Flask(__name__)
      35→    current_dir = os.path.dirname(os.path.abspath(__file__))
      36→    app.config.from_file(os.path.join(current_dir, "static", "config.json"), json.load)
      37→    common_object_test(app)
      38→
      39→
      40→def test_from_prefixed_env(monkeypatch):
      41→    monkeypatch.setenv("FLASK_STRING", "value")
      42→    monkeypatch.setenv("FLASK_BOOL", "true")
      43→    monkeypatch.setenv("FLASK_INT", "1")
      44→    monkeypatch.setenv("FLASK_FLOAT", "1.2")
      45→    monkeypatch.setenv("FLASK_LIST", "[1, 2]")
      46→    monkeypatch.setenv("FLASK_DICT", '{"k": "v"}')
      47→    monkeypatch.setenv("NOT_FLASK_OTHER", "other")
      48→
      49→    app = flask.Flask(__name__)
      50→    app.config.from_prefixed_env()
      51→
      52→    assert app.config["STRING"] == "value"
      53→    assert app.config["BOOL"] is True
      54→    assert app.config["INT"] == 1
      55→    assert app.config["FLOAT"] == 1.2
      56→    assert app.config["LIST"] == [1, 2]
      57→    assert app.config["DICT"] == {"k": "v"}
      58→    assert "OTHER" not in app.config
      59→
      60→
      61→def test_from_prefixed_env_custom_p
  [... truncated ...]

SOURCE EDIT EVIDENCE
--------------------
- src/flask/config.py
  Tool: Edit action #8
  old_text_sha256: f688bfdc83cebd49b8da84a5f40f5480e15ac7d32f0ea1a578ae7b0dd28b8353
  new_text_sha256: f3a1dd55cf64d7ea04eb4c75fa75c873c48a97e84dad32df8200aa4b4df13d7e
- swebench_9_15/test_tomllib.py
  Tool: Write action #25
  new_text_sha256: 5bf530129c6da9fe9e634b342a2759b0bf5d1cd77041c98c6e1dcb45831870c4
- swebench_9_15/test_tomllib.py
  Tool: Edit action #28
  old_text_sha256: bf14c400a70ed0ab73b5d63e760b7265188583bd5c94de80949c97556c25d833
  new_text_sha256: 18f90a4e923dd3ad6ada9219d837770c55b522c543b1747f4c8b7435c438958b
- swebench_9_15/test_comprehensive.py
  Tool: Write action #39
  new_text_sha256: 3cd0afd9836e08626dff1963010471cddcf2e6d3b2a676447ed0d0fa7c56755d

PRIOR AGENT FINAL MESSAGE
-------------------------
(none)

INJECTION WARNING
-----------------
This memory is from a prior related issue. Use it as evidence only. Do not copy patches blindly.
